--- a/index.qmd
+++ b/index.qmd
@@ -28,11 +28,26 @@ execute:
 ::: {#hero-heading}
 :::
 
-## Hi there!
+<!-- Search in "Go to file" here https://github.com/devicons/devicon -->
+<p align="center" style="margin: 0em 0;">
+<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/r/r-plain.svg" alt="R" width="30px"  style="padding-right:10px;" />
+<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-plain.svg" alt="Python" width="30px" style="padding-right:10px;" />
+<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="SQL" width="30px" style="padding-right:10px;" />
+<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML" width="30px" style="padding-right:10px;" />
+<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS" width="30px" style="padding-right:10px;" />
+<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React" width="30px" style="padding-right:10px;" />
+<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="NodeJS" width="30px" style="padding-right:10px;" />
+<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git" width="30px" style="padding-right:10px;" />
+<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" alt="VSCode" width="30px" style="padding-right:10px;" />
+<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/rstudio/rstudio-original.svg" alt="VSCode" width="30px" style="padding-right:10px;" />
+</p>
+
+
+# Hi there!
 
 Welcome to my website — I'm glad you're here!
 
-I'm currently a PhD student at [Uppsala University](https://www.uu.se/en/contact-and-organisation/staff?query=N21-1055), following an academic path rooted in `health and sustainability sciences`, with degrees in Public Health (BPH) and One Health and Global Health (MSc).
+I'm currently a PhD student at [Uppsala University](https://www.uu.se/en/contact-and-organisation/staff?query=N21-1055), following an academic path rooted in `health and sustainability science`, with degrees in Public Health (BPH) and One Health/Global Health (MSc).
 
 Beyond academia, I am `passionate about programming`, especially in R, with experience building packages, dashboards, Shiny apps, and working with large language models. My technical skills also extend to intermediate Python and foundational knowledge of SQL, HTML, CSS, and JavaScript. I’m especially `interested in reproducibility and open science`, and finding ways to streamline workflow.
 
@@ -40,4 +55,32 @@ My guiding principles in life are **kindness**, **discipline**, and **integrity*
 
 In my spare time, I love exploring history and diving into subjects related to religion and culture.
 
-![](assets/img/winner-quote.jpg){fig-align="center"}
+[![GitHub Streak](https://streak-stats.demolab.com?user=ntluong95&theme=react&hide_border=true&fire=FF8C3E&ring=FF9FE1&stroke=FF9FE1)](https://git.io/streak-stats)
+
+<table>
+  <tr>
+    <td>
+      <a href="https://github.com/anuraghazra/github-readme-stats">
+        <img
+          src="https://github-readme-stats-wdme.vercel.app/api?username=ntluong95&theme=react&text_color=7cc0e2&title_color=7cc0e2&show_icons=true&icon_color=ff9fe1&hide_border=true"
+          alt="Luong Nguyen's GitHub Stats"
+          height="180"
+        />
+      </a>
+    </td>
+    <td>
+      <a href="https://github.com/anuraghazra/github-readme-stats">
+        <img
+          src="https://github-readme-stats-wdme.vercel.app/api/top-langs/?username=ntluong95&layout=compact&theme=react&text_color=7cc0e2&title_color=7cc0e2&hide_border=true&hide=shell,css,html"
+          alt="Luong Nguyen's Top Languages"
+          height="180"
+        />
+      </a>
+    </td>
+  </tr>
+</table>
+
+<b>Note:</b> Top languages is only a metric of the languages my public code consists of and doesn't reflect experience or skill level.
+
+
+<!-- ![](assets/img/winner-quote.jpg){fig-align="center"} -->
