--- a/cv.qmd
+++ b/cv.qmd
@@ -7,7 +7,7 @@ anchor-sections: false
 
 ::::: {.d-inline-flex style="align-items:baseline"}
 ::: p-2
-![](assets/img/uu-logo.png){width="80px" fig-alt="Uppsala University logo"}
+![](assets/img/uu-logo.png){width="60px" fig-alt="Uppsala University logo"}
 :::
 
 ::: h3
@@ -19,9 +19,14 @@ Uppsala University
 
 -   **PhD project**: Analyzed the degree to which factors driving antimicrobial resistance (AMR) development and spread are addressed by AMR-specific policies and interventions versus broader societal approaches, particularly the Sustainable Development Goals (SDGs) agenda.
 
-![Policy gaps in integrating SDGs into AMR planning and implementation.](assets/img/uu-finding.svg){fig-align="center" height="500"}
+<!-- ![Policy gaps in integrating SDGs into AMR planning and implementation.](assets/img/uu-finding.svg){fig-align="center" height="500"} -->
 
-
+```{r}
+#| echo: false
+#| fig-align: center
+#| out-width: 50%
+knitr::include_graphics(here::here("assets/img/uu-finding.svg"))
+```
 
 -   **INFLUX project** (ERC grant No. 101039376): Contributed to research investigating and establishing database of drivers responsible for the emergence of emerging pests and pathogens, assessing governmental responses and their cascading social-ecological effects.
 
@@ -48,11 +53,18 @@ Applied Epi
 -   Lead translator the [Vietnamese version](https://epirhandbook.com/vn/index.vn.html) of R for applied epidemiology and public health                                                                        
 
 
-![R training conducted by WHO for Philippines MoH.](assets/img/Ae-training.jpg)
+<!-- ![R training conducted by WHO for Philippines MoH.](assets/img/Ae-training.jpg) -->
+
+```{r}
+#| echo: false
+#| fig-align: center
+#| out-width: 70%
+knitr::include_graphics(here::here("assets/img/Ae-training.jpg"))
+```
 
 ::::: {.d-inline-flex style="align-items:baseline"}
 ::: p-2
-![](assets/img/HUPH.png){width="80px" fig-alt="HUPH logo"}
+![](assets/img/HUPH-1.png){width="60px" fig-alt="HUPH logo"}
 :::
 
 ::: h3
@@ -73,14 +85,22 @@ Supported three research projects on sanitation, food safety, and disease preven
 -   Conducted project administrative tasks, i.e. contacting with local & international partners, applying ethical approval
 
 
-![Present research findings at Safepork conferece at Berlin 2019](assets/img/berlin.jpg)
+<!-- ![Present research findings at Safepork conferece at Berlin 2019](assets/img/berlin.jpg) -->
+
+```{r}
+#| echo: false
+#| fig-align: center
+#| out-width: 70%
+knitr::include_graphics(here::here("assets/img/berlin.jpg"))
+```
+
 
 
 ## {{< fa graduation-cap >}} Education
 
 ::::: {.d-inline-flex style="align-items:baseline"}
 ::: p-2
-![](assets/img/uu-logo.png){width="80px" fig-alt="Uppsala University logo"}
+![](assets/img/uu-logo.png){width="60px" fig-alt="Uppsala University logo"}
 :::
 
 ::: h3
@@ -94,7 +114,7 @@ Uppsala University
 
 ::::: {.d-inline-flex style="align-items:baseline"}
 ::: p-2
-![](assets/img/liege.png){width="60px" fig-alt="Liege University logo"}
+![](assets/img/liege.png){width="100px" fig-alt="Liege University logo"}
 :::
 
 ::: h3
@@ -110,7 +130,7 @@ University of Liège
 
 ::::: {.d-inline-flex style="align-items:baseline"}
 ::: p-2
-![](assets/img/hmu.png){width="60px" fig-alt="Hanoi Medical University"}
+![](assets/img/hmu.png){width="50px" fig-alt="Hanoi Medical University"}
 :::
 
 ::: h3
@@ -127,11 +147,11 @@ Hanoi Medical University
 
 ## {{< fa user-group >}} Communities and Organizations
 
-![](assets/img/avise.png){width="60px" fig-alt="avise logo" style="padding-right:1em"} [The Association of Vietnamese Science and Technology Experts in Sweden (AVISE)](https://www.linkedin.com/groups/14482383/)
+![](assets/img/avise.png){width="80px" fig-alt="avise logo" style="padding-right:1em"} [The Association of Vietnamese Science and Technology Experts in Sweden (AVISE)](https://www.linkedin.com/groups/14482383/)
 
-![](assets/img/AE_logo.png){width="60px" fig-alt="AE logo" style="padding-right:1em"} [Applied Epi Community](https://community.appliedepi.org/)
+![](assets/img/AE_logo.png){width="80px" fig-alt="AE logo" style="padding-right:1em"} [Applied Epi Community](https://community.appliedepi.org/)
 
-![](assets/img/globelife.png){width="60px" fig-alt="GlobeLife" style="padding-right:1em"} [GlobeLife](https://www.globelife.se/w/gl/en)
+![](assets/img/globelife.png){width="80px" fig-alt="GlobeLife" style="padding-right:1em"} [GlobeLife](https://www.globelife.se/w/gl/en)
 
 ## {{< fa book >}} Publication
 
@@ -141,13 +161,13 @@ Hanoi Medical University
 
 1. `Luong NT`, Didier W, Mats M, Tiscar G, Peter SJ (2024) Characterizing proximal and distal drivers of antimicrobial resistance: An umbrella review. Journal of Global Antimicrobial Resistance
    
-2. `Luong NT`, Didier W, Mats M, Peter SJ (2024) Characterizing proximal and distal drivers of antimicrobial resistance: An umbrella review. Journal of Global Antimicrobial Resistance
+2. Peter SJ, `Luong NT` and 10 co-authors (2024). Association between national action and trends in antibiotic resistance: an analysis of 73 countries from 2000 to 2023
    
-3. Peter SJ, `Luong NT` and 10 co-authors (2024). Association between national action and trends in antibiotic resistance: an analysis of 73 countries from 2000 to 2023
+3. Ngo HTH, `Nguyen TL`, and 6 co-authors (2021). Microbial contamination and associated risk factors in retailed pork from key value chains in Northern Vietnam. Food Microbiology 
    
-4. Ngo HTH, `Nguyen TL`, and 6 co-authors (2021). Microbial contamination and associated risk factors in retailed pork from key value chains in Northern Vietnam. Food Microbiology 
+4. Lam S, Huyen NTT, Ngo HTH, `Nguyen TL`, and 6 co-authors (2021). Unpacking the Theory Behind One Health Food Safety Programs: A Vietnam Case Study. Frontiers in Veterinary Science
    
-5. Lam S, Huyen NTT, Ngo HTH, `Nguyen TL`, and 6 co-authors (2021). Unpacking the Theory Behind One Health Food Safety Programs: A Vietnam Case Study. Frontiers in Veterinary Science
+5. Mai HT, Le GM, Tran BX, Do HN, Latkin CA, `Luong NT`, and 6 co-authors (2018). Adherence to antiretroviral therapy among HIV/AIDS patients in the context of early treatment initiation in Vietnam. Patient Preference and Adherence
 
 ## {{< fa person-chalkboard >}} Academic events attendance
 
