--- a/index.qmd
+++ b/index.qmd
@@ -47,11 +47,12 @@ execute:
 
 Welcome to my website — I'm glad you're here!
 
-I'm currently a PhD student at [Uppsala University](https://www.uu.se/en/contact-and-organisation/staff?query=N21-1055), following an academic path rooted in `health and sustainability science`, with degrees in Public Health (BPH) and One Health/Global Health (MSc).
+
+I'm currently a PhD student at [Uppsala University](https://www.uu.se/en/contact-and-organisation/staff?query=N21-1055), following an academic path rooted in `health and sustainability science`, with  and One Health/Global Health (MSc).
 
 Beyond academia, I am `passionate about programming`, especially in R, with experience building packages, dashboards, Shiny apps, and working with large language models. My technical skills also extend to intermediate Python and foundational knowledge of SQL, HTML, CSS, and JavaScript. I’m especially `interested in reproducibility and open science`, and finding ways to streamline workflow.
 
-My guiding principles in life are **kindness**, **discipline**, and **integrity**. I have found genuine fulfillment in working within the health and sustainability data science field, where I have the opportunity to engage with an inspiring community of like-minded professionals.
+My guiding principles in life are **kindness**, **discipline**, and **integrity**. I have found genuine fulfillment in working within the health and sustainability data science field, where I have the opportunity to engage with an inspiring community of like-minded professionals. I am also cautiously optimistic about AI. With a keen eye on the interplay between human actions and technological advancements, I aim to understand and leverage this relationship for societal and health betterment, seeking to uncover novel ways in which technology can be harnessed to shape positive health outcomes.
 
 In my spare time, I love exploring history and diving into subjects related to religion and culture.
 
