--- a/cv.qmd
+++ b/cv.qmd
@@ -66,7 +66,7 @@ Uppsala University
 :::
 :::::
 
-[PhD student]{.h5} [Oct 2021 -- Oct 2025]{.cv-date}
+[PhD student, Center for Health and Sustainability]{.h5} [Oct 2021 -- Oct 2025]{.cv-date}
 
 -   **PhD project**: Analyzed the degree to which factors driving antimicrobial resistance (AMR) development and spread are addressed by AMR-specific policies and interventions versus broader societal approaches, particularly the Sustainable Development Goals (SDGs) agenda.
 
