update avise day and positron package

--- a/index.qmd
+++ b/index.qmd
@@ -51,7 +51,7 @@ Welcome to my website — I'm glad you're here!
 
 I'm currently a PhD student at [Uppsala University](https://www.uu.se/en/contact-and-organisation/staff?query=N21-1055), following an academic path rooted in `health and sustainability science`, with  and One Health/Global Health (MSc). My interests encompass various research areas in health, epidemiology and sustainability, primarily focusing on methodology, applied research, and software implementation. 
 
-Beyond academia, I am `passionate about programming`, especially in R, with experience building packages, dashboards, Shiny apps, and working with large language models. My technical skills also extend to intermediate Python and foundational knowledge of SQL, HTML, CSS, and JavaScript. I am a strong advocate of `open science and reproducible research`, always looking for ways to streamline workflow. Lately, I’ve been diving deeper into environmental epidemiology, clinical trials and data engineering.
+Beyond academia, I am `passionate about programming`, especially in R, with experience building packages, dashboards, Shiny apps, and working with large language models. My technical skills also extend to intermediate Python and foundational knowledge of SQL, HTML, CSS, and TypeScript. I am a strong advocate of `open science and reproducible research`, always looking for ways to streamline workflow. Lately, I’ve been diving deeper into environmental epidemiology, clinical trials and data engineering.
 
 My guiding principles in life are `kindness`, `discipline`, and `integrity`. I have found genuine fulfillment in working within the health and sustainability data science field, where I have the opportunity to engage with an inspiring community of like-minded professionals. I am also cautiously optimistic about AI. With a keen eye on the interplay between human actions and technological advancements, I aim to understand and leverage this relationship for societal and health betterment, seeking to uncover novel ways in which technology can be harnessed to shape positive health outcomes.
 
