--- a/talks/2025-06-07_avise_day_2025/index.qmd
+++ b/talks/2025-06-07_avise_day_2025/index.qmd
@@ -21,15 +21,17 @@ AVISE trân trọng thông báo: Ngày hội AVISE 2025 – sự kiện thườn
 Bạn không cần phải là chuyên gia – chỉ cần muốn kết nối.
 
 **Sự kiện có gì?**
-🌱 Gặp gỡ người Việt làm việc trong nhiều lĩnh vực khác nhau tại Thụy Điển
-🤝 Chia sẻ kinh nghiệm học tập, làm việc, định hướng nghề nghiệp
-🎯 Tìm hiểu về AVISE và các hoạt động trong thời gian tới cho cộng đồng trí thức
-💡 Cơ hội trở thành thành viên, cùng xây dựng cộng đồng người Việt vững mạnh tại Thụy Điển
+
+- 🌱 Gặp gỡ người Việt làm việc trong nhiều lĩnh vực khác nhau tại Thụy Điển
+- 🤝 Chia sẻ kinh nghiệm học tập, làm việc, định hướng nghề nghiệp
+- 🎯 Tìm hiểu về AVISE và các hoạt động trong thời gian tới cho cộng đồng trí thức
+- 💡 Cơ hội trở thành thành viên, cùng xây dựng cộng đồng người Việt vững mạnh tại Thụy Điển
 
 📌 **Save the date**
-📅 Thứ Bảy, ngày 07/06/2025
-🕒 14h00 – 21h00
-📍 Địa điểm cụ thể tại Stockholm sẽ được thông báo sau
-📲 Link đăng ký sẽ được cập nhật trong thời gian tới – stay tuned!
+
+- 📅 Thứ Bảy, ngày 07/06/2025
+- 🕒 14h00 – 21h00
+- 📍 Địa điểm cụ thể tại Stockholm sẽ được thông báo sau
+- 📲 Link đăng ký sẽ được cập nhật trong thời gian tới – stay tuned!
 
 
