--- a/index.qmd
+++ b/index.qmd
@@ -30,28 +30,29 @@ execute:
 :::
 
 <!-- Search in "Go to file" here https://github.com/devicons/devicon -->
-<p align="center" style="margin: 0em 0;">
-<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/r/r-plain.svg" alt="R" width="30px"  style="padding-right:10px;" />
-<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-plain.svg" alt="Python" width="30px" style="padding-right:10px;" />
-<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="SQL" width="30px" style="padding-right:10px;" />
-<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML" width="30px" style="padding-right:10px;" />
-<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS" width="30px" style="padding-right:10px;" />
-<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React" width="30px" style="padding-right:10px;" />
-<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="NodeJS" width="30px" style="padding-right:10px;" />
-<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git" width="30px" style="padding-right:10px;" />
-<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" alt="VSCode" width="30px" style="padding-right:10px;" />
-<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/rstudio/rstudio-original.svg" alt="VSCode" width="30px" style="padding-right:10px;" />
-</p>
 
+<p align="center" style="margin: 0em 0;">
+
+<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/r/r-plain.svg" alt="R" width="30px" style="padding-right:10px;"/> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-plain.svg" alt="Python" width="30px" style="padding-right:10px;"/> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="SQL" width="30px" style="padding-right:10px;"/> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML" width="30px" style="padding-right:10px;"/> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS" width="30px" style="padding-right:10px;"/> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React" width="30px" style="padding-right:10px;"/> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="NodeJS" width="30px" style="padding-right:10px;"/> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git" width="30px" style="padding-right:10px;"/> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" alt="VSCode" width="30px" style="padding-right:10px;"/> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/rstudio/rstudio-original.svg" alt="VSCode" width="30px" style="padding-right:10px;"/>
+
+</p>
 
 # Hi there!
 
 Welcome to my website — I'm glad you're here!
 
-
-I'm currently a PhD student at [Uppsala University](https://www.uu.se/en/contact-and-organisation/staff?query=N21-1055), following an academic path rooted in `health and sustainability science`, with  and One Health/Global Health (MSc). My interests encompass various research areas in health, epidemiology and sustainability, primarily focusing on methodology, applied research, and software implementation. 
+I'm currently a PhD student at [Uppsala University](https://www.uu.se/en/contact-and-organisation/staff?query=N21-1055), following an academic path rooted in `health and sustainability science`, with and One Health/Global Health (MSc). My interests encompass various research areas in health, epidemiology and sustainability, primarily focusing on methodology, applied research, and software implementation.
 
 Beyond academia, I am `passionate about programming`, especially in R, with experience building packages, dashboards, Shiny apps, and working with large language models. My technical skills also extend to intermediate Python and foundational knowledge of SQL, HTML, CSS, and TypeScript. I am a strong advocate of `open science and reproducible research`, always looking for ways to streamline workflow. Lately, I’ve been diving deeper into environmental epidemiology, clinical trials and data engineering.
+
+::: {data-iframe-width="150" data-iframe-height="270" data-share-badge-id="fe87f90a-7103-44e5-a933-36930f81216c" data-share-badge-host="https://www.credly.com"}
+:::
+
+```{=html}
+<script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+```
+
+![](assets/img/extensions.png){fig-align="center"}
 
 My guiding principles in life are `kindness`, `discipline`, and `integrity`. I have found genuine fulfillment in working within the health and sustainability data science field, where I have the opportunity to engage with an inspiring community of like-minded professionals. I am also cautiously optimistic about AI. With a keen eye on the interplay between human actions and technological advancements, I aim to understand and leverage this relationship for societal and health betterment, seeking to uncover novel ways in which technology can be harnessed to shape positive health outcomes.
 
@@ -59,30 +60,10 @@ In my spare time, I love exploring history and diving into subjects related to r
 
 [![GitHub Streak](https://streak-stats.demolab.com?user=ntluong95&theme=react&hide_border=true&fire=FF8C3E&ring=FF9FE1&stroke=FF9FE1)](https://git.io/streak-stats)
 
-<table>
-  <tr>
-    <td>
-      <a href="https://github.com/anuraghazra/github-readme-stats">
-        <img
-          src="https://github-readme-stats-wdme.vercel.app/api?username=ntluong95&theme=react&text_color=7cc0e2&title_color=7cc0e2&show_icons=true&icon_color=ff9fe1&hide_border=true"
-          alt="Luong Nguyen's GitHub Stats"
-          height="180"
-        />
-      </a>
-    </td>
-    <td>
-      <a href="https://github.com/anuraghazra/github-readme-stats">
-        <img
-          src="https://github-readme-stats-wdme.vercel.app/api/top-langs/?username=ntluong95&layout=compact&theme=react&text_color=7cc0e2&title_color=7cc0e2&hide_border=true&hide=shell,css,html"
-          alt="Luong Nguyen's Top Languages"
-          height="180"
-        />
-      </a>
-    </td>
-  </tr>
-</table>
+|  |  |
+|------------------------------------|------------------------------------|
+| [![Luong Nguyen's GitHub Stats](https://github-readme-stats-wdme.vercel.app/api?username=ntluong95&theme=react&text_color=7cc0e2&title_color=7cc0e2&show_icons=true&icon_color=ff9fe1&hide_border=true){alt="Luong Nguyen's GitHub Stats"}](https://github.com/anuraghazra/github-readme-stats) | [![Luong Nguyen's Top Languages](https://github-readme-stats-wdme.vercel.app/api/top-langs/?username=ntluong95&layout=compact&theme=react&text_color=7cc0e2&title_color=7cc0e2&hide_border=true&hide=shell,css,html){alt="Luong Nguyen's Top Languages"}](https://github.com/anuraghazra/github-readme-stats) |
 
 <b>Note:</b> Top languages is only a metric of the languages my public code consists of and doesn't reflect experience or skill level.
-
 
 <!-- ![](assets/img/winner-quote.jpg){fig-align="center"} -->
