--- a/handbook/pages/epi_basic.qmd
+++ b/handbook/pages/epi_basic.qmd
@@ -2,7 +2,7 @@
 pagetitle: "Feature Engineering A-Z | Numeric Overview"
 ---
 
-- [ ] Học thêm về EPI tại [[Seminars in Epidemiology]], [Nhặt nhạnh kiến thức - Hoàng Bảo Long - Google Trang tính](https://docs.google.com/spreadsheets/d/1bs6qROsORAftpugoV0hgGqjeFwYSJIPRFHYADclRerc/edit#gid=0), [Research tweets - Hoang Bao Long - Google Trang tính](https://docs.google.com/spreadsheets/d/1ZP98I5IoWwo5vEvhwQvEyjMPuVaTLOj7teYmYvN-pok/edit#gid=0)  
+- Học thêm về EPI tại [[Seminars in Epidemiology]], [Nhặt nhạnh kiến thức - Hoàng Bảo Long - Google Trang tính](https://docs.google.com/spreadsheets/d/1bs6qROsORAftpugoV0hgGqjeFwYSJIPRFHYADclRerc/edit#gid=0), [Research tweets - Hoang Bao Long - Google Trang tính](https://docs.google.com/spreadsheets/d/1ZP98I5IoWwo5vEvhwQvEyjMPuVaTLOj7teYmYvN-pok/edit#gid=0)  
 
 
 # Numeric Overview {#sec-numeric}
@@ -32,7 +32,7 @@ The four main types of problems we deal with when working with individual numeri
 
 ## Distributional problems
 
-TODO: add more explanation to this section
+add more explanation to this section
 
 -   logarithm
 -   sqrt
@@ -92,7 +92,7 @@ These types of models produce the same fit, just at a slower pace than if you do
 Any algorithms using Gradient Descent fit into this category.
 
 ::: callout-caution
-# TODO
+
 
 Have a KNN diagram show why this is important List which types of models need feature scaling.
 Should be a 2 column list.
@@ -106,7 +106,7 @@ Left=name, right=comment %in% c(no effect, different fit, slow down)
 -   polynomial
 
 ::: callout-caution
-# TODO
+
 
 Show different distributions, and how well the different methods do at dealing with them
 :::
@@ -114,7 +114,7 @@ Show different distributions, and how well the different methods do at dealing w
 ## Outliers {#sec-numeric-outliers-issues}
 
 ::: callout-caution
-# TODO
+
 
 Fill in some text here, and list issues
 
