--- a/handbook/pages/epi_basic.vn.qmd
+++ b/handbook/pages/epi_basic.vn.qmd
@@ -29,7 +29,7 @@ The four main types of problems we deal with when working with individual numeri
 
 ## Distributional problems
 
-TODO: add more explanation to this section
+ add more explanation to this section
 
 -   logarithm
 -   sqrt
@@ -89,7 +89,7 @@ These types of models produce the same fit, just at a slower pace than if you do
 Any algorithms using Gradient Descent fit into this category.
 
 ::: callout-caution
-# TODO
+
 
 Have a KNN diagram show why this is important List which types of models need feature scaling.
 Should be a 2 column list.
@@ -103,7 +103,7 @@ Left=name, right=comment %in% c(no effect, different fit, slow down)
 -   polynomial
 
 ::: callout-caution
-# TODO
+
 
 Show different distributions, and how well the different methods do at dealing with them
 :::
@@ -111,7 +111,7 @@ Show different distributions, and how well the different methods do at dealing w
 ## Outliers {#sec-numeric-outliers-issues}
 
 ::: callout-caution
-# TODO
+
 
 Fill in some text here, and list issues
 
