--- a/index.qmd
+++ b/index.qmd
@@ -39,7 +39,7 @@ execute:
 
 Welcome to my website — I'm glad you're here!
 
-I'm currently a PhD student at [Uppsala University](https://www.uu.se/en/contact-and-organisation/staff?query=N21-1055), following an academic path rooted in `health and sustainability science`, with an One Health/Global Health (MSc) focused. My interests encompass various research areas in health, epidemiology and sustainability, primarily focusing on methodology, applied research, and software implementation.
+I hold a doctoral degree in Global Health from [Uppsala University](https://www.uu.se/en/contact-and-organisation/staff?query=N21-1055), building upon an academic foundation in health and sustainability science with a focus on One Health/Global Health (MSc). My research interests span epidemiology, health, and sustainability, with a primary emphasis on methodology, applied and implementation research.
 
 ::: {.column-margin}
 ::: {data-iframe-width="250" data-iframe-height="270" data-share-badge-id="fe87f90a-7103-44e5-a933-36930f81216c" data-share-badge-host="https://www.credly.com"}
@@ -49,7 +49,7 @@ I'm currently a PhD student at [Uppsala University](https://www.uu.se/en/contact
 :::
 :::
 
-Beyond academia, I am `passionate about programming`, especially in R, with experience building packages, dashboards, Shiny apps, and working with Large Language Models. My technical skills also extend to intermediate Python and foundational knowledge of SQL, HTML, CSS, and TypeScript. I am a strong advocater of `open science and reproducible research`, always looking for ways to streamline workflow. Lately, I’ve been diving deeper into environmental epidemiology, clinical trials and data engineering.
+Beyond academia, I am `passionate about programming`, especially in R and Python, with experience building packages, dashboards, Shiny apps, and working with Large Language Models. My technical skills also extend to foundational knowledge of SQL, HTML, CSS, and JavaScript. I am a strong advocater of `open science and reproducible research`, always looking for ways to streamline workflow. Recently, I’ve been diving deeper into environmental epidemiology, clinical trials and data engineering.
 
 ![](assets/img/extensions.png){fig-align="center"}
 
